examples/test_package/DoubleDC_Test/steps/benchzebra:precise.pl_run2/#test_analysis_2_result.txt
### **Evaluation Report: Zebra Puzzle in ProbLog**

---

#### **1. Document Title**
**Analysis of Zebra Puzzle Implementation in ProbLog**

---

#### **2. Background and Purpose**
The provided code attempts to solve the classic "Zebra Puzzle" using ProbLog, a probabilistic extension of Prolog. The puzzle involves deducing the correct arrangement of houses based on a set of given constraints. The purpose of this evaluation is to verify the correctness of the implementation, identify any failures, and analyze the root causes of errors.

---

#### **3. Test Results Summary**
The test results indicate a failure due to the following error:
```plaintext
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for 'member/2' at 4:21.
```

**Failed Query:**  
The query `zebra(Houses)` failed because the predicate `member/2` is not defined in the ProbLog context.

---

#### **4. Failure Localization**
- **Failed Predicate:** `member/2`
- **Code Location:** Line 4, Column 21
- **Issue:** The predicate `member/2` is used in the code but is not defined in the ProbLog environment. The error occurs because ProbLog does not recognize this predicate by default.

---

#### **5. Root Cause Analysis**
- **Logical Correctness:**  
  The logic of the puzzle constraints is correctly implemented in the code. However, the failure arises from the use of an undefined predicate (`member/2`).
  
- **Probabilistic Context:**  
  The code does not involve probabilistic facts or DeepProbLog features (e.g., `nn/3`, `tensor/…`). The issue is purely syntactic and related to classical Prolog predicates.

- **Recursive Termination:**  
  The recursive predicates (`right_of/3`, `next_to/3`, and `my_member/2`) are correctly defined and should terminate as expected.

---

#### **6. Overall Analysis**
- **Functional Requirements:**  
  - **Classical Reasoning:** Partially met. The constraints are correctly encoded, but the missing `member/2` predicate prevents execution.
  - **Probabilistic Reasoning:** Not applicable (no probabilistic facts or rules).
  - **Neural Network Integration:** Not used ("DeepProbLog feature not used").

- **Edge Cases:**  
  - The code assumes a list of 5 houses, but the input validation is implicit.
  - The undefined `member/2` predicate is a critical oversight.

---

#### **7. Error Summary**

| Number | Problem                          | Impact                          | Suggestion                          |
|--------|----------------------------------|----------------------------------|-------------------------------------|
| 1      | Undefined `member/2` predicate   | Execution failure               | Define `member/2` or replace with a ProbLog-compatible alternative. |

---

### **Conclusion**
The implementation of the Zebra Puzzle in ProbLog is logically sound but fails due to the undefined `member/2` predicate. Addressing this issue will allow the code to execute correctly. No probabilistic or DeepProbLog features are used in this implementation. 

**Word Count:** 350 words.